--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
+    <link rel="icon" href="img/tic-tac-toe.png">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <div class="header-bar">
-        <p>Tic-Tac-Toe</p>
+        <p><a href="index.html">Tic-Tac-Toe</a></p>
     </div>
     <div class="main-content">
         <div class="player-menu">
